--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 streamlit==1.28.0
 sentence-transformers==2.2.2
 huggingface-hub==1.21.1
-torch>=2.1.0
+torch>=2.1.0,<2.2.0
 transformers>=4.35.0
 numpy>=1.25.0
 scipy>=1.11.0
+rich==14.3.1
+markdown-it-py==4.0.0
+pygments==2.19.2
